services/fd-tagging-tool/src/test/resources/valid/PossibleConfiguration/PossibleConfiguration.fd
package valid.PossibleConfiguration;

featurediagram PossibleConfiguration {

  Car -> ElectricWindowOpener? & PanoramicRoof?;

  Car -> SmallTrunk ^ LargeTrunk;

  PanoramicRoof -> Electric?;

  Electric requires ElectricWindowOpener;
}
