services/fd-tagging-tool/src/test/resources/invalid/NoComponentPresent/NoComponentPresent.fd
package invalid.NoComponentPresent;

featurediagram NoComponentPresent {

  Car -> ElectricWindowOpener? & PanoramicRoof?;

  Car -> SmallTrunk ^ LargeTrunk;

  PanoramicRoof -> Electric?;

  Electric requires ElectricWindowOpener;
}
